--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-amplify": "^6.1.4",
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^0.13.3",
+    "@aws-amplify/backend-cli": "^0.14.0",
+    "aws-cdk": "^2.139.0",
+    "aws-cdk-lib": "^2.139.0",
+    "constructs": "^10.3.0",
+    "esbuild": "^0.20.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.3",
+    "typescript": "^5.4.5"
   }
 }
