--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.3",
     "typescript": "^5.4.5"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   }
 }
