--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wasabisullivan",
+  "name": "beansullivan",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,27 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "aws-amplify": "^6.1.4",
-    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next": "14.2.3"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^0.13.3",
-    "@aws-amplify/backend-cli": "^0.14.0",
-    "aws-cdk": "^2.139.0",
-    "aws-cdk-lib": "^2.139.0",
-    "constructs": "^10.3.0",
-    "esbuild": "^0.20.2",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.7.3",
-    "typescript": "^5.4.5"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
