--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@vercel/blob": "^0.23.2",
     "axios": "^1.7.2",
     "cloudinary": "^2.2.0",
-    "next": "14.2.3",
+    "framer-motion": "^12.7.4",
+    "next": "^15.3.1",
     "next-cloudinary": "^6.5.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "yet-another-react-lightbox": "^3.19.0"
   },
   "devDependencies": {
