--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
     "axios": "^1.7.2",
     "cloudinary": "^2.2.0",
     "framer-motion": "^12.7.4",
-    "next": "^15.3.1",
+    "next": "16.0.10",
     "next-cloudinary": "^6.16.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "yet-another-react-lightbox": "^3.19.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "16.0.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
