--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "axios": "^1.7.2",
     "cloudinary": "^2.2.0",
     "framer-motion": "^12.7.4",
-    "next": "16.0.10",
+    "next": "^16.0.10",
     "next-cloudinary": "^6.16.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "yet-another-react-lightbox": "^3.19.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
-    "eslint": "^8",
-    "eslint-config-next": "16.0.10",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
